# coach

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  render.yml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/org/xinutec/coach/: Geofencing.kt  MainActivity.kt  Notifications.kt  PacingClient.kt  Prefs.kt
coach-pacing/: Cargo.toml
coach-pacing/src/: domain.rs  health.rs  lib.rs
coach-pacing/src/pacing/: ability.rs  cover.rs  dose.rs  engine.rs  mod.rs  readiness.rs  residual.rs  types.rs
data/catalog/: equipment.json  exercises.json  muscle-groups.json  muscles.json
docs/: anatomy-renders.md  field-test.md  todo.md  trainer.md
frontend/: package-lock.json  package.json
frontend/e2e/: ui-pages.spec.ts
frontend/scripts/: ng-build.sh
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.routes.ts  app.scss  app.ts  coach-api.ts  models.ts
frontend/src/app/features/balance/: balance.html  balance.scss  balance.ts
frontend/src/app/features/history/: group.spec.ts  group.ts  history.html  history.scss  history.ts
frontend/src/app/features/locations/: locations.html  locations.scss  locations.ts
frontend/src/app/features/log/: log-sheet.html  log-sheet.scss  log-sheet.ts
frontend/src/app/features/settings/: settings.html  settings.scss  settings.ts
frontend/src/app/features/today/: today.html  today.scss  today.ts
frontend/src/app/shared/: cached-resource.ts  youtube.spec.ts  youtube.ts
frontend/src/app/stores/: catalog.ts
migrations/: 0006_library.sql  0007_location_place_link.sql  0008_coach_mode.sql  0009_catalog_state.sql  0010_drop_night_cutoff.sql  0011_location_equipment_option.sql  0012_barbell_loadable.sql  0013_location_plate.sql  0014_drop_program.sql  0015_exercise_flags.sql  0016_plate_fitment_and_qty.sql  0017_equipment_weighted.sql  0018_weighted_hold_metric.sql  0019_exercise_power.sql
render/: .gitignore  fetch-asset.sh  muscle_map.json  pose.py  poses.json  prepare.py  render.py
render/rigging/: README.md  gen-body.py  transfer-rig.py
scripts/: add-image.py  backtest.sh  coachctl.py  deploy.sh  dev-db.sh  export-nocodb.mjs  gen-types.sh  prod-dump.sh  simulate.sh  verify.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/equipment/: mod.rs  repo.rs  types.rs
src/exercise/: image.rs  mod.rs  repo.rs  types.rs
src/health/: mod.rs
src/import/: mod.rs
src/location/: loads.rs  mod.rs  owned.rs  repo.rs  types.rs
src/muscle/: mod.rs  repo.rs  types.rs
src/pacing/: ability.rs  cover.rs  dose.rs  engine.rs  mod.rs  readiness.rs  residual.rs  service.rs  types.rs
src/program/: repo.rs  starter.rs
src/routes/: api.rs  equipment.rs  exercises.rs  import.rs  locations.rs  mod.rs  muscles.rs  pacing.rs  places.rs  workout.rs
src/seed/: mod.rs  render.rs
src/settings/: repo.rs  types.rs
src/workout/: mod.rs  repo.rs  types.rs
tests/: ability.rs  ability_props.rs  athlete_sim.rs  catalog.rs  cover.rs  db.rs  engine_props.proptest-regressions  engine_props.rs  loads.rs  owned_load.rs  pacing_engine.rs  places.rs  readiness.rs  residual.rs  set_shape.rs
