[package]
name = "coach"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["coach-pacing"]

[features]
# Turns on ts-rs everywhere — coach's own wire types *and* the pacing core's — so
# `cargo test --features ts export_bindings` emits the frontend TypeScript (see
# scripts/gen-types.sh). Off by default: normal builds carry no ts-rs at all, and
# the core stays no_std.
ts = ["dep:ts-rs", "coach-pacing/ts"]

[dependencies]
# The pure pacing engine + the domain enums it reasons over. Compiled #![no_std]
# in normal builds — it physically cannot do IO, read the clock, or hold global
# state (see coach-pacing/src/lib.rs). The shell below threads the clock + DB in.
coach-pacing = { path = "coach-pacing" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.7", features = ["fs", "trace"] }
axum-extra = { version = "0.12", features = ["cookie"] }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "mysql",
    "chrono",
    "derive",
    "macros",
    "migrate",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "form",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Convert Utc::now() → the user's local tz for the pacing window/weekday logic.
chrono-tz = "0.10"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
# Renders catalog pictures on the way into the DB (see src/seed/image.rs): the
# source keeps its alpha, the served blob is what the app can actually display.
# Every format the bundle actually holds — 67 jpeg, 41 png, 13 webp, 1 gif. A
# format the decoder doesn't know is a boot failure, not a skipped picture.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "gif",
] }
rand = "0.10"
url = "2"
time = "0.3"
ulid = "1"
anyhow = "1"
thiserror = "2"
# Generates the frontend TS interfaces from these Rust types (see scripts/
# gen-types.sh + frontend/src/app/generated/) so the wire shapes can't drift.
ts-rs = { version = "12", optional = true, features = ["serde-compat", "chrono-impl", "serde-json-impl"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dependencies are compiled optimised even in a debug build. Decoding and resizing
# the catalog's ~15 MB of images is the seeder's one genuinely CPU-bound job, and
# unoptimised it took the DB tests from 8 seconds to 90 — a tax on every `verify`.
# Our own code stays unoptimised, so debugging and backtraces are unaffected.
[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
# Router-level tests drive the app via ServiceExt::oneshot (no live socket).
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Property tests: engine invariants that must hold for *every* input.
proptest = "1"
